Bug: Horizontal scroll bar in preview.

--- a/core/theme/asset/sass/frontend-edit.scss
+++ b/core/theme/asset/sass/frontend-edit.scss
@@ -1,3 +1,17 @@
+html, body {
+	min-height: 100%;
+	position: relative;
+}
+
+.lf-edit-container {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
 .lf-edit-box {
 	position: absolute;
 	overflow: hidden;
